--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_analytics: ^10.8.7
   flutter_svg: ^2.0.10+1
   google_sign_in: ^6.2.1
+  firebase_database: ^10.4.10
 
 
 dev_dependencies:
