--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^11.6.10
   firebase_app_check: ^0.2.1+18
+  provider: ^6.1.2
 
 
 dev_dependencies:
